overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -1791,7 +1791,7 @@ button {
 
 .p-fitness__text {
   position: absolute;
-  top: 17.6vw;
+  bottom: 5.6vw;
   right: 4vw;
   z-index: 1;
   color: #fff;
@@ -1810,7 +1810,7 @@ button {
 @media screen and (min-width: 768px) {
   .p-fitness__text {
     font-size: 2rem;
-    top: 23.7920937042vw;
+    bottom: 10.980966325vw;
     right: 10.7613469985vw;
   }
 }
